# django_metrology_schedule

./: .gitignore  Makefile  README.md  heroku-run-and-deploy-manual.md  pyproject.toml  requirements.txt
common/: forms.py  urls.py  utils.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
instruments/: admin.py  models.py  urls.py  views.py
instruments/migrations/: 0001_initial.py  0002_auto_20211103_2007.py
instruments/views/: __init__.py  catalog.py  instrument_types.py  instruments.py
referencies/: admin.py  models.py  urls.py  views.py
referencies/migrations/: 0001_initial.py  0002_auto_20211103_1733.py  0003_alter_contragent_contacts.py
referencies/views/: __init__.py  catalog.py  contragents.py  places.py  validators.py
templates/: base.html  contragents_list.html  desktop.html  instr_catalog.html  instrument_types_list.html  instruments_list.html  item_create.html  item_delete.html  item_details.html  item_edit.html  places_list.html  refs_catalog.html  validators_list.html  verification_schedule.html  verifications_list.html
templates/registration/: login.html
verifications/: admin.py  models.py  urls.py  views.py
verifications/migrations/: 0001_initial.py
verifications/views/: __init__.py  verification_events.py  verification_schedule_events.py
