[tool.poetry]
name = "metrology_schedule"
version = "0.1.0"
description = "System for manage measurement tools chek schedule"
authors = ["Al Rempel <alex@rmpl.of.by>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-extensions = "^3.1.3"
django-select2 = "^7.8.1"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
isort = "^5.9.3"
black = "^21.9b0"
jedi = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
